--- a/template/index_box.html
+++ b/template/index_box.html
@@ -41,7 +41,7 @@
 						<td class="tc2">{catrow.forumrow.TOPICS}</td>
 						<td class="tc3">{catrow.forumrow.POSTS}</td>
 						<td class="tcr">
-							<div class="last-msg">
+							<div class="last-msg-index">
 							<span>
 							<!-- BEGIN switch_topic_title -->
 							<a href="{catrow.forumrow.U_LATEST_TOPIC}" title="{catrow.forumrow.LATEST_TOPIC_TITLE}" class="last-post-icon">{catrow.forumrow.LATEST_TOPIC_NAME}</a><br />
