--- a/template/cdm.html
+++ b/template/cdm.html
@@ -1,110 +1,135 @@
 <div id="galerie">
 	<ul id="galerie_mini">
 		<li>
-			<a href="http://d9.e-loader.net/fF3dwNv4BU.jpg" title="Zenira">
-				<img src="http://d9.e-loader.net/fF3dwNv4BU.jpg" alt="Zenira" />
+			<a href="http://i1181.photobucket.com/albums/x427/Wistity/095.png" title="Tail">
+				<img src="http://i1181.photobucket.com/albums/x427/Wistity/095.png" alt="Tail" />
 			</a>
 		</li>
 		<li>
-			<a href="http://www.heberger-image.fr/data/images/46308_s_972_truel_copie.png" title="Majiin-Ryo">
-				<img src="http://www.heberger-image.fr/data/images/46308_s_972_truel_copie.png" alt="Majiin-Ryo" />
+			<a href="http://gfxf.net/images/lsP.png" title="Che">
+				<img src="http://gfxf.net/images/lsP.png" alt="Che" />
 			</a>
 		</li>
 		<li>
-			<a href="http://f.cl.ly/items/273L2B2c1n0k0N0s1h1y/5%20minutes.png" title="Nawel">
-				<img src="http://f.cl.ly/items/273L2B2c1n0k0N0s1h1y/5%20minutes.png" alt="Nawel" />
+			<a href="http://image.noelshack.com/fichiers/2012/30/1343515144-from-the-nef-2.png" title="TEGL">
+				<img src="http://image.noelshack.com/fichiers/2012/30/1343515144-from-the-nef-2.png" alt="TEGL" />
 			</a>
 		</li>
 		<li>
-			<a href="http://img15.hostingpics.net/pics/950499smudge.png" title="esiao">
-				<img src="http://img15.hostingpics.net/pics/950499smudge.png" alt="esiao" />
+			<a href="http://i.imgur.com/FffJL.png" title="TEGL">
+				<img src="http://i.imgur.com/FffJL.png" alt="TEGL" />
 			</a>
 		</li>
 		<li>
-			<a href="http://i1090.photobucket.com/albums/i375/kizu1/space.png" title="Kizu">
-				<img src="http://i1090.photobucket.com/albums/i375/kizu1/space.png" alt="Kizu" />
+			<a href="http://i.minus.com/i5H8M9mZchWRk.png" title="Che">
+				<img src="http://i.minus.com/i5H8M9mZchWRk.png" alt="Che" />
 			</a>
 		</li>
 		<li>
-			<a href="http://i.imgur.com/NKhdm.png" title="Green + Kizu">
-				<img src="http://i.imgur.com/NKhdm.png" alt="Green + Kizu" />
+			<a href="http://img11.hostingpics.net/pics/500233GirlVexel.png" title="Kaigan">
+				<img src="http://img11.hostingpics.net/pics/500233GirlVexel.png" alt="Kaigan" />
 			</a>
 		</li>
 		<li>
-			<a href="http://i1090.photobucket.com/albums/i375/kizu1/skull-5.png" title="Kizu">
-				<img src="http://i1090.photobucket.com/albums/i375/kizu1/skull-5.png" alt="Kizu" />
+			<a href="http://nsa30.casimages.com/img/2012/07/09/1207090904172319.png" title="Harry">
+				<img src="http://nsa30.casimages.com/img/2012/07/09/1207090904172319.png" alt="Harry" />
 			</a>
 		</li>
 		<li>
-			<a href="http://sournoishack.com/uploads/2146621888yeah_yaay.png" title="mehdi">
-				<img src="http://sournoishack.com/uploads/2146621888yeah_yaay.png" alt="mehdi" />
+			<a href="http://img11.hostingpics.net/pics/366465HotAirBalloon.png" title="Kaigan">
+				<img src="http://img11.hostingpics.net/pics/366465HotAirBalloon.png" alt="Kaigan" />
 			</a>
 		</li>
 		<li>
-			<a href="http://i1126.photobucket.com/albums/l608/VaaaNGFX/Free%20Tags/406.png" title="VaaaN">
-				<img src="http://i1126.photobucket.com/albums/l608/VaaaNGFX/Free%20Tags/406.png" alt="VaaaN" />
+			<a href="http://i1127.photobucket.com/albums/l621/LKCV02/vskizu.png" title="Vysa">
+				<img src="http://i1127.photobucket.com/albums/l621/LKCV02/vskizu.png" alt="Vysa" />
 			</a>
 		</li>
 		<li>
-			<a href="http://i1090.photobucket.com/albums/i375/kizu1/foalssign2.png" title="Kizu">
-				<img src="http://i1090.photobucket.com/albums/i375/kizu1/foalssign2.png" alt="Kizu" />
+			<a href="http://f.cl.ly/items/43221I1J1g3K0E3Y0x3j/lightning2.png" title="Nawel">
+				<img src="http://f.cl.ly/items/43221I1J1g3K0E3Y0x3j/lightning2.png" alt="Nawel" />
 			</a>
 		</li>
 		<li>
-			<a href="http://i.imgur.com/TaAoL.png" title="Ushio">
-				<img src="http://i.imgur.com/TaAoL.png" alt="Ushio" />
+			<a href="http://img15.hostingpics.net/pics/860282WaterLily.png" title="Kaigan">
+				<img src="http://img15.hostingpics.net/pics/860282WaterLily.png" alt="Kaigan" />
 			</a>
 		</li>
 		<li>
-			<a href="http://img15.hostingpics.net/pics/897678CollabEsiaoDtksansnotes.png" title="DtK + esiao">
-				<img src="http://img15.hostingpics.net/pics/897678CollabEsiaoDtksansnotes.png" alt="DtK + esiao" />
+			<a href="http://img11.hostingpics.net/pics/696128giraffe2.png" title="esiao">
+				<img src="http://img11.hostingpics.net/pics/696128giraffe2.png" alt="esiao" />
 			</a>
 		</li>
 		<li>
-			<a href="http://image.noelshack.com/fichiers/2012/25/1340201867-Sanstitre-.png" title="Zbeer">
-				<img src="http://image.noelshack.com/fichiers/2012/25/1340201867-Sanstitre-.png" alt="Zbeer" />
+			<a href="http://img15.hostingpics.net/pics/604690Fc81ANvfby.png" title="Majiin Ryo">
+				<img src="http://img15.hostingpics.net/pics/604690Fc81ANvfby.png" alt="Majiin Ryo" />
 			</a>
 		</li>
 		<li>
-			<a href="http://i1127.photobucket.com/albums/l621/LKCV02/skull.png" title="Couleurs">
-				<img src="http://i1127.photobucket.com/albums/l621/LKCV02/skull.png" alt="Couleurs" />
+			<a href="http://i1070.photobucket.com/albums/u491/DtK6/VersusKia.png" title="DTK">
+				<img src="http://i1070.photobucket.com/albums/u491/DtK6/VersusKia.png" alt="DTK" />
 			</a>
 		</li>
 		<li>
-			<a href="http://d10.e-loader.net/DH7l73wnCx.png" title="Majiin-Ryo">
-				<img src="http://d10.e-loader.net/DH7l73wnCx.png" alt="Majiin-Ryo" />
+			<a href="http://imageftw.com/uploads/20120802/Taokaff.png" title="Che">
+				<img src="http://imageftw.com/uploads/20120802/Taokaff.png" alt="Che" />
 			</a>
 		</li>
 		<li>
-			<a href="http://i1127.photobucket.com/albums/l621/LKCV02/fts/green.png" title="Green + Couleurs">
-				<img src="http://i1127.photobucket.com/albums/l621/LKCV02/fts/green.png" alt="Green + Couleurs" />
+			<a href="http://img15.hostingpics.net/pics/964923nnB74036wm.png" title="teen">
+				<img src="http://img15.hostingpics.net/pics/964923nnB74036wm.png" alt="teen" />
 			</a>
 		</li>
 		<li>
-			<a href="http://i45.servimg.com/u/f45/12/95/84/83/skull10.png" title="Kabylifornien">
-				<img src="http://i45.servimg.com/u/f45/12/95/84/83/skull10.png" alt="Kabylifornien" />
+			<a href="http://www.tinyuploads.com/images/GE0AUx.png" title="Gliscor974">
+				<img src="http://www.tinyuploads.com/images/GE0AUx.png" alt="Gliscor974" />
 			</a>
 		</li>
 		<li>
-			<a href="http://img15.hostingpics.net/pics/520005sotwcrane3.png" title="esiao">
-				<img src="http://img15.hostingpics.net/pics/520005sotwcrane3.png" alt="esiao" />
+			<a href="http://img11.hostingpics.net/pics/799932Sanstitre43.png" title="esiao">
+				<img src="http://img11.hostingpics.net/pics/799932Sanstitre43.png" alt="esiao" />
 			</a>
 		</li>
 		<li>
-			<a href="http://d24.e-loader.net/xGC0Wn44wg.jpg" title="Zenira">
-				<img src="http://d24.e-loader.net/xGC0Wn44wg.jpg" alt="Zenira" />
+			<a href="http://img15.hostingpics.net/pics/160699summer1.png" title="Yaan">
+				<img src="http://img15.hostingpics.net/pics/160699summer1.png" alt="Yaan" />
 			</a>
 		</li>
 		<li>
-			<a href="http://d12.e-loader.net/ySppSXFtkd.png" title="Gliscor974">
-				<img src="http://d12.e-loader.net/ySppSXFtkd.png" alt="Gliscor974" />
+			<a href="http://i.imgur.com/YtyWb.png" title="Kizu">
+				<img src="http://i.imgur.com/YtyWb.png" alt="Kizu" />
+			</a>
+		</li>
+		<li>
+			<a href="http://img11.hostingpics.net/pics/772366IlyauratoujoursunespoiraudeldestnbresSupernikobe.png" title="H-S93">
+				<img src="http://img11.hostingpics.net/pics/772366IlyauratoujoursunespoiraudeldestnbresSupernikobe.png" alt="H-S93" />
+			</a>
+		</li>
+		<li>
+			<a href="http://i1126.photobucket.com/albums/l608/VaaaNGFX/Free%20Tags/430.png" title="VaaaN">
+				<img src="http://i1126.photobucket.com/albums/l608/VaaaNGFX/Free%20Tags/430.png" alt="VaaaN" />
+			</a>
+		</li>
+		<li>
+			<a href="http://i.imgur.com/TxCOs.png" title="Samy">
+				<img src="http://i.imgur.com/TxCOs.png" alt="Samy" />
+			</a>
+		</li>
+		<li>
+			<a href="http://i1127.photobucket.com/albums/l621/LKCV02/vsharry-1.png" title="Vysa">
+				<img src="http://i1127.photobucket.com/albums/l621/LKCV02/vsharry-1.png" alt="Vysa" />
+			</a>
+		</li>
+		<li>
+			<a href="http://i1090.photobucket.com/albums/i375/kizu1/05-3.png" title="Kizu">
+				<img src="http://i1090.photobucket.com/albums/i375/kizu1/05-3.png" alt="Kizu" />
 			</a>
 		</li>
 	</ul>
 	<dl id="photo">
 		<dt>(cliquez sur une miniature)</dt>
 		<dd>
-			<img id="big_pict" src="http://img11.hostingpics.net/pics/774267CDM18juin02juillet.png" alt="Galaxy Graph" />
+			<img id="big_pict" src="http://i.imgur.com/9o4xT.png" alt="Galaxy Graph" />
 		</dd>
 	</dl>
 </div>
